Detail page in progress

--- a/briefly-static-content/root/index.html
+++ b/briefly-static-content/root/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
-  <title>Eolaire Admin Console</title>
+  <title>Briefly</title>
 
   <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.css" />
   <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap-theme.css" />
@@ -22,12 +23,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#/entities"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span>&nbsp;Admin Console</a>
+        <a class="navbar-brand" href="#/entities"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span>&nbsp;Briefly</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="g-app-navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#/entities">Entities</a></li>
+          <li><a href="#/entities">Catalog</a></li>
           <li class="nav-divider"></li>
           <li><a href="#/about">About</a></li>
         </ul>
