--- a/briefly-static-content/root/index.html
+++ b/briefly-static-content/root/index.html
@@ -28,7 +28,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="g-app-navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#/entities">Catalog</a></li>
+          <li><a href="#/catalog">Catalog</a></li>
           <li class="nav-divider"></li>
           <li><a href="#/about">About</a></li>
         </ul>
