--- a/briefly-static-content/root/index.html
+++ b/briefly-static-content/root/index.html
@@ -23,7 +23,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#/entities"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;Briefly</a>
+        <a class="navbar-brand" href="#/storefront"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;Briefly</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="g-app-navbar-collapse">
