--- a/briefly-static-content-v2/root/index.html
+++ b/briefly-static-content-v2/root/index.html
@@ -1,48 +1,6 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
-  <title>Briefly v2</title>
-
-  <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.css" />
-  <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap-theme.css" />
-
-  <link rel="stylesheet" type="text/css" href="css/global.css" />
+  <meta http-equiv="REFRESH" content="0;url=g/index">
 </head>
-<body>
-
-<!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#g-app-navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#/storefront"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;Briefly</a>
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="g-app-navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="#/catalog">Catalog</a></li>
-          <li class="nav-divider"></li>
-          <li><a href="#/about">About</a></li>
-        </ul>
-      </div> <!-- /.navbar-collapse -->
-  </div> <!-- /.container -->
-</nav>
-
-<div id="main-content" class="container">
-  <p>Loading...</p>
-</div>
-
-<div id="footer">
-</div>
-
-<script src="js/bundle.js"></script>
-</body>
 </html>
